[tool.poetry]
name = "ppg_contloller"
version = "0.1.0"
description = ""
authors = ["gensyu <gensyuu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9,<3.10"
PySide6 = "^6.1.2"
pyserial = "^3.4"
construct = "^2.10.67"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
pyinstaller = "^4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
